--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2293, 315)\n",
-      "Exercise Transform Data(Tuple) Count: 2293\n"
+      "Raw Data Count(Exercises, Days): (1953, 258)\n",
+      "Exercise Transform Data(Tuple) Count: 1953\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 315\n"
+      "Exercise Days: 258\n"
      ]
     }
    ],
@@ -198,107 +198,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Arnold Press[Dumbbell]', 27)\n",
-      "('Assisted Dips[Machine]', 55)\n",
-      "('Assisted Pull-Up[Machine]', 68)\n",
-      "('Back Extension', 43)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Arnold Press[Dumbbell]', 16)\n",
+      "('Assisted Dips[Machine]', 40)\n",
+      "('Assisted Pull-Up[Machine]', 56)\n",
+      "('Back Extension', 36)\n",
+      "('Behind The Neck Press[Smith Machine]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 17)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Bent Over Row[Barbell]', 7)\n",
+      "('Bent Over Row[Dumbbell]', 15)\n",
+      "('Biceps Curls[Dumbbell]', 1)\n",
       "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 1)\n",
       "('Biceps Curls[Machine]', 13)\n",
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 53)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Chest Fly[Pec Deck Machine]', 39)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 98)\n",
+      "('Deadlift[Barbell]', 84)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Dips', 18)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 69)\n",
+      "('Flat Bench Press[Barbell]', 55)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Full Squat[Barbell]', 2)\n",
+      "('Full Squat[Barbell]', 1)\n",
       "('Full Squat[Smith Machine]', 2)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Goblet Squat[Kettlebell]', 15)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Hanging Leg Raise', 3)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 7)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Hip Abduction', 1)\n",
-      "('Hip Abduction[Machine]', 89)\n",
+      "('Hip Abduction[Machine]', 75)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
       "('Hip Thrust', 5)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Incline Bench Press[Barbell]', 27)\n",
-      "('Incline Bench Press[Dumbbell]', 28)\n",
-      "('Incline Bench Press[Machine]', 37)\n",
+      "('Incline Bench Press[Barbell]', 20)\n",
+      "('Incline Bench Press[Dumbbell]', 15)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 110)\n",
-      "('Leg Extension[Machine]', 63)\n",
-      "('Long Pull Row[Cable]', 73)\n",
+      "('Lat Pulldown[Machine]', 98)\n",
+      "('Leg Extension[Machine]', 62)\n",
+      "('Long Pull Row[Cable]', 64)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 125)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 17)\n",
+      "('Lying Leg Curls[Machine]', 114)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
+      "('Military Press[Smith Machine]', 6)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 5)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Plank', 104)\n",
-      "('Power Leg Press[Machine]', 66)\n",
+      "('One Leg Deadlift[Kettlebell]', 37)\n",
+      "('Plank', 94)\n",
+      "('Power Leg Press[Machine]', 52)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 1)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 29)\n",
-      "('Running', 47)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Seated Chest Press[Machine]', 91)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
+      "('Running', 37)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Seated Chest Press[Machine]', 89)\n",
       "('Seated Leg Press[Machine]', 14)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Seated Row[Machine]', 80)\n",
-      "('Shoulder Press[Machine]', 86)\n",
-      "('Side Lateral Raise[Dumbbell]', 76)\n",
+      "('Seated Row[Machine]', 69)\n",
+      "('Shoulder Press[Machine]', 80)\n",
+      "('Side Lateral Raise[Dumbbell]', 63)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Split Squat[Smith Machine]', 16)\n",
+      "('Split Squat[Smith Machine]', 6)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 54)\n",
+      "('Straight Arm Pulldown[Cable]', 41)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
+      "('Triceps Pushdown[Cable]', 13)\n",
       "('Trx Lunge', 1)\n",
       "('Trx Row', 2)\n",
       "('Trx Suspended Lunge', 1)\n",
-      "('Upright Row[EZ Curl Bar]', 17)\n",
+      "('Upright Row[EZ Curl Bar]', 4)\n",
       "('Vipr Ice Skater', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
@@ -334,115 +328,109 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 125)\n",
-      "('Lat Pulldown[Machine]', 110)\n",
-      "('Plank', 104)\n",
-      "('Deadlift[Barbell]', 98)\n",
-      "('Seated Chest Press[Machine]', 91)\n",
-      "('Hip Abduction[Machine]', 89)\n",
-      "('Shoulder Press[Machine]', 86)\n",
+      "('Lying Leg Curls[Machine]', 114)\n",
+      "('Lat Pulldown[Machine]', 98)\n",
+      "('Plank', 94)\n",
+      "('Seated Chest Press[Machine]', 89)\n",
+      "('Deadlift[Barbell]', 84)\n",
       "('Hip Adduction[Machine]', 81)\n",
-      "('Seated Row[Machine]', 80)\n",
-      "('Side Lateral Raise[Dumbbell]', 76)\n",
-      "('Long Pull Row[Cable]', 73)\n",
-      "('Flat Bench Press[Barbell]', 69)\n",
-      "('Assisted Pull-Up[Machine]', 68)\n",
-      "('Power Leg Press[Machine]', 66)\n",
-      "('Leg Extension[Machine]', 63)\n",
-      "('Assisted Dips[Machine]', 55)\n",
-      "('Straight Arm Pulldown[Cable]', 54)\n",
-      "('Chest Fly[Pec Deck Machine]', 53)\n",
-      "('Running', 47)\n",
-      "('Back Extension', 43)\n",
-      "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Incline Bench Press[Machine]', 37)\n",
+      "('Shoulder Press[Machine]', 80)\n",
+      "('Hip Abduction[Machine]', 75)\n",
+      "('Seated Row[Machine]', 69)\n",
+      "('Long Pull Row[Cable]', 64)\n",
+      "('Side Lateral Raise[Dumbbell]', 63)\n",
+      "('Leg Extension[Machine]', 62)\n",
+      "('Assisted Pull-Up[Machine]', 56)\n",
+      "('Flat Bench Press[Barbell]', 55)\n",
+      "('Power Leg Press[Machine]', 52)\n",
+      "('Straight Arm Pulldown[Cable]', 41)\n",
+      "('Assisted Dips[Machine]', 40)\n",
+      "('Chest Fly[Pec Deck Machine]', 39)\n",
+      "('One Leg Deadlift[Kettlebell]', 37)\n",
+      "('Running', 37)\n",
+      "('Back Extension', 36)\n",
+      "('Incline Bench Press[Machine]', 35)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 29)\n",
-      "('Incline Bench Press[Dumbbell]', 28)\n",
-      "('Incline Bench Press[Barbell]', 27)\n",
-      "('Arnold Press[Dumbbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Dips', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Incline Bench Press[Barbell]', 20)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
-      "('Upright Row[EZ Curl Bar]', 17)\n",
-      "('Military Press[Smith Machine]', 17)\n",
-      "('Bent Over Row[Barbell]', 17)\n",
-      "('Split Squat[Smith Machine]', 16)\n",
+      "('Dips', 18)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
+      "('Arnold Press[Dumbbell]', 16)\n",
+      "('Goblet Squat[Kettlebell]', 15)\n",
+      "('Bent Over Row[Dumbbell]', 15)\n",
+      "('Incline Bench Press[Dumbbell]', 15)\n",
       "('Hip Bridge', 15)\n",
-      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
+      "('Triceps Pushdown[Cable]', 13)\n",
+      "('Pull-Up', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Pull-Up', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Push-Up', 11)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Flat Bench Press[Machine]', 8)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Machine]', 8)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 7)\n",
+      "('Bent Over Row[Barbell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('One Arm Seated Row[Machine]', 6)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Split Squat[Smith Machine]', 6)\n",
+      "('Military Press[Smith Machine]', 6)\n",
+      "('One Arm Seated Row[Machine]', 5)\n",
       "('Body-Weight Squat', 5)\n",
       "('Hip Thrust', 5)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('Goblet Squat[Dumbbell]', 4)\n",
       "('Reverse Crunch', 4)\n",
+      "('Upright Row[EZ Curl Bar]', 4)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Full Squat[Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Behind The Neck Press[Smith Machine]', 3)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
       "('Dead Bug', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Walking', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Hip External Rotation', 1)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
       "('Cross Lunges', 1)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
       "('Trx Suspended Lunge', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 1)\n",
+      "('Reverse Cable Cross-Over[Cable]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
       "('Trx Lunge', 1)\n",
-      "('Squat[Kettlebell]', 1)\n"
+      "('Hip Abduction', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Biceps Curls[Dumbbell]', 1)\n"
      ]
     }
    ],
