--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -94,8 +94,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2310, 318)\n",
-      "Exercise Transform Data(Tuple) Count: 2310\n"
+      "Raw Data Count(Exercises, Days): (2315, 319)\n",
+      "Exercise Transform Data(Tuple) Count: 2315\n"
      ]
     }
    ],
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 318\n"
+      "Exercise Days: 319\n"
      ]
     }
    ],
@@ -215,16 +215,16 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 8)\n",
-      "('Chest Fly[Pec Deck Machine]', 53)\n",
+      "('Chest Fly[Pec Deck Machine]', 54)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
       "('Deadlift[Barbell]', 99)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Dips', 18)\n",
+      "('Dips', 19)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 69)\n",
+      "('Flat Bench Press[Barbell]', 70)\n",
       "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Flat Bench Press[Machine]', 8)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
@@ -246,8 +246,8 @@
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
-      "('Incline Bench Press[Dumbbell]', 28)\n",
-      "('Incline Bench Press[Machine]', 37)\n",
+      "('Incline Bench Press[Dumbbell]', 29)\n",
+      "('Incline Bench Press[Machine]', 38)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
@@ -345,104 +345,104 @@
       "('Seated Row[Machine]', 80)\n",
       "('Side Lateral Raise[Dumbbell]', 77)\n",
       "('Long Pull Row[Cable]', 75)\n",
-      "('Flat Bench Press[Barbell]', 69)\n",
+      "('Flat Bench Press[Barbell]', 70)\n",
       "('Assisted Pull-Up[Machine]', 69)\n",
       "('Power Leg Press[Machine]', 67)\n",
       "('Leg Extension[Machine]', 63)\n",
-      "('Assisted Dips[Machine]', 55)\n",
       "('Straight Arm Pulldown[Cable]', 55)\n",
-      "('Chest Fly[Pec Deck Machine]', 53)\n",
+      "('Assisted Dips[Machine]', 55)\n",
+      "('Chest Fly[Pec Deck Machine]', 54)\n",
       "('Running', 47)\n",
       "('Back Extension', 44)\n",
       "('One Leg Deadlift[Kettlebell]', 38)\n",
-      "('Incline Bench Press[Machine]', 37)\n",
+      "('Incline Bench Press[Machine]', 38)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 30)\n",
+      "('Incline Bench Press[Dumbbell]', 29)\n",
       "('Arnold Press[Dumbbell]', 28)\n",
-      "('Incline Bench Press[Dumbbell]', 28)\n",
       "('Incline Bench Press[Barbell]', 27)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
-      "('Military Press[Smith Machine]', 18)\n",
-      "('Bent Over Row[Barbell]', 18)\n",
-      "('Dips', 18)\n",
-      "('Bent Over Row[Dumbbell]', 18)\n",
+      "('Dips', 19)\n",
       "('Goblet Squat[Kettlebell]', 18)\n",
-      "('Flat Bench Press[Dumbbell]', 18)\n",
       "('Upright Row[EZ Curl Bar]', 18)\n",
+      "('Bent Over Row[Barbell]', 18)\n",
+      "('Flat Bench Press[Dumbbell]', 18)\n",
+      "('Military Press[Smith Machine]', 18)\n",
+      "('Bent Over Row[Dumbbell]', 18)\n",
       "('Split Squat[Smith Machine]', 17)\n",
       "('Hip Bridge', 15)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
       "('Deadlift[Kettlebell]', 12)\n",
-      "('Push-Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
+      "('Push-Up', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Cable Cross-Over[Cable]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
+      "('Cable Cross-Over[Cable]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
-      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('One Arm Seated Row[Machine]', 6)\n",
-      "('Reverse Cable Cross-Over[Cable]', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
+      "('Behind The Neck Press[Smith Machine]', 6)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 6)\n",
       "('Hip Thrust', 5)\n",
-      "('Reverse Crunch', 4)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Reverse Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Reverse Crunch', 4)\n",
       "('Goblet Squat[Dumbbell]', 4)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Hanging Leg Raise', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Full Squat[Barbell]', 2)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('Dead Bug', 2)\n",
       "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Walking', 2)\n",
-      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
+      "('Full Squat[Barbell]', 2)\n",
+      "('Trx Row', 2)\n",
+      "('One Leg Daedlift[Kettlebell]', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
+      "('Walking', 2)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
       "('Vipr Lateral Shuffle', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Hip Abduction', 1)\n",
       "('Cross Lunges', 1)\n",
       "('Hip External Rotation', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Trx Suspended Lunge', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n"
+      "('Vipr Ice Skater', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Trx Lunge', 1)\n"
      ]
     }
    ],
